--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxanium&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Oxanium', cursive !important;
   background-color: #EDE4E3 !important;
 
 }
